# py-multiauth

./: .gitignore  .mypy.ini  .pylintrc  Dockerfile  LICENSE  README.md  RELEASE.md  commitlint.config.js  package.json  pyproject.toml
.github/: CODEOWNERS  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yaml  ci.yaml
.hooks/: pre-commit.json
.hooks/shared/: py-black.json  py-mypy.json  py-pytest.json  py-ruff.json  py-yamllint.json
docs/: authentication.md  index.md
examples/: firebase.py  manual_flow.py
multiauth/: __init__.py  __main__.py  cli.py  config.py  generator.py  handlers.py  helpers.py  main.py  manager.py  user_manager.py  utils.py
multiauth/entities/: errors.py  http.py  interfaces.py  main.py  utils.py
multiauth/entities/providers/: aws.py  graphql.py  oauth.py  rest.py  webdriver.py
multiauth/providers/: __init__.py  apikey.py  aws.py  basic.py  digest.py  graphql.py  manual.py  oauth.py  rest.py
multiauth/providers/webdriver/: __init__.py  command.py  core.py  extractors.py  routine.py  runner.py  transformers.py
multiauth/static/: auth_schema.json
multiauth/types/: __init__.py  abst.py  errors.py  http.py  interfaces.py  main.py
multiauth/types/providers/: aws.py  graphql.py  oauth.py  rest.py
scripts/: generate_docs.py
scripts/templates/: docs_auth_template.md
tests/: test_expired_token.py  test_generator.py
tests/fixtures/: .authrc-example  .authrc-shorthand-example
tests/providers/: test_basic_auth.py  test_manual_auth.py
tests/unit/: test_authrc_loader.py  test_expired_token.py  test_generator.py
tests/unit/providers/: test_basic_auth.py  test_manual_auth.py
